--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Liga-A-start-template",
+  "name": "english school",
   "version": "1.0.0",
   "description": "Стартовый шаблон сборки Лиги А",
   "devDependencies": {
